Fixed the line height so that text wont overlap
--HG--
branch : moin-1.6-branch

--- a/raippa/theme/raippa/css/projection.css
+++ b/raippa/theme/raippa/css/projection.css
@@ -42,5 +42,11 @@ ul {
 	line-height: 1.3em;
 }
 
+ol {
+        font-size: 90%;
+        line-height: 1.3em;
+}
+
+
 #interwiki, #pagelocation, #pageinfo { display: none; }
 
